Corrected alignment issues, rounded off corners on form box and centered the text

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -156,15 +156,13 @@ button .call-to-action-button {
   max-width: 450px;
   margin: 10px auto;
   color: #ffffff;
+  border-radius: 10px;
 }
 
-/* .mother-image {
-  margin-right: -70%;
-  margin-left: auto;
-  width: 10;
-  height: 10;
-  /* position: sticky; */
-
+.signup-title {
+  font-size: 2vw;
+  text-align: center;
+}
 
 /* == MOTHER REQUESTS PAGE == */
 
